All crud methods tested for movies-api
