# swagger/movies-server/src/main/resources/api-spec.yaml
@@ -79,7 +79,7 @@ paths:
         '201':
           description: created
           schema:
-            type: object
+            $ref: '#/definitions/Rating'
   /movies/{movieId}/avg:
     get:
       description: get the average rating for a specific movie
@@ -130,7 +130,7 @@ paths:
           type: string
         - name: ratingId
           in: query
-          requires: true
+          required: true
           type: string
         - name: rating
           in: body
@@ -152,7 +152,7 @@ paths:
           type: string
         - name: ratingId
           in: query
-          requires: true
+          required: true
           type: string
       responses:
         '200':
@@ -182,6 +182,8 @@ definitions:
       rating_id:
         type: integer
       user_id:
+        type: string
+      movie_id:
         type: string
       rating:
         type: integer
